--- a/LearningEnglishWeb/Views/CollectWordTraining/CollectWordTrainingAnswerResult.cshtml
+++ b/LearningEnglishWeb/Views/CollectWordTraining/CollectWordTrainingAnswerResult.cshtml
@@ -3,25 +3,22 @@
     ViewData["Title"] = "CollectWordTrainingAnswerResult";
 }
 
-@*<h4 class="text-center">
-    <span>@Model.RigtAnswer</span>
 
-    <button class="audio btn p-0" data-request-url="@Url.Action("GetAudio", "Vocabulary")">
-        <i class="fas audio fa-play"></i>
-    </button>
-</h4>*@
-
-    <div class="answerArea">
-        @if (Model.CollectWordAnswerResults.Any(ar => !ar.IsRight))
-        {
-           <h4>@Model.RigtAnswer </h4>
-        }
-        @foreach (var letter in Model.CollectWordAnswerResults)
-        {
-            <button class="letter m-1 btn @(@letter.IsRight ? "btn-success" : "btn-danger") " disabled> @letter.Letter </button>
-        }
+@if (!Model.IsCorrectAnswer)
+{
+    <div class="cwRightAnswerArea">
+        <h3>@Model.RigtAnswer </h3>
     </div>
-<div class="questionArea">
-    <button class="nextAnswerBtn btn btn-primary text-center" data-request-url="@Url.Action("GetNextQuestion")"> Следующий вопрос </button>
+}
+
+<div class="userAnswerArea cw">
+    @foreach (var letter in Model.CollectWordAnswerResults)
+    {
+        <button class="letter m-1 btn @(@letter.IsRight ? "btn-success" : "btn-danger") " disabled> @letter.Letter </button>
+    }
+</div>
+
+<div class="actionArea">
+    <button class="nextAnswerBtn btn btn-primary btn-lg pr-5 pl-5 text-center" data-request-url="@Url.Action("GetNextQuestion")"> Следующий вопрос </button>
 </div>
 
