--- a/LearningEnglishWeb/Views/Training/TrainingSummarizing.cshtml
+++ b/LearningEnglishWeb/Views/Training/TrainingSummarizing.cshtml
@@ -1,7 +1,7 @@
 ﻿@using LearningEnglishWeb.ViewModels.Training
 @model TrainingSummarizingModel
 
-    <div class="row align-items-center justify-content-center">
+    <div class="row align-items-center justify-content-center h-100">
         <div class="text-center col">
             <p> Правильных ответов @Model.RightQuestions из @Model.TotalQuestions </p>
             <p> @Model.Summary </p>
