--- a/LearningEnglishWeb/Views/ChooseTranslateTraining/ChooseTranslateTrainingQuestion.cshtml
+++ b/LearningEnglishWeb/Views/ChooseTranslateTraining/ChooseTranslateTrainingQuestion.cshtml
@@ -6,13 +6,14 @@
 </div>
 
 <div class="row">
-    <div class="col-4">
+    <div class="col-4 col-lg-5 questionArea">
         <h4> <span>@Model.Word</span> <button class="audio btn p-0"  data-request-url="@Url.Action("GetAudio", "Vocabulary")">  <i class="fas audio fa-play"></i> </button></h4>
         
-
-        <img  id="wordImage" src="@Model.ImageSrc" class="w-100 mt-4 pl-0 ml-0" />
+        <div class="imageWrapper">
+            <img id="wordImage" src="@Model.ImageSrc"  />
+        </div>
     </div>
-    <div class="col-8 answerArea" id="answerRefreshArea">        
+    <div class="col-8 col-lg-6 answerArea" id="answerRefreshArea">        
         @foreach (var trans in Model.Translations)
         {
             <button class="answerBtn btn-block m-2 btn btn-info text-left" data-request-url="@Url.Action("CheckAnswer")">@trans</button>
