--- a/LearningEnglishWeb/Views/CollectWordTraining/Index.cshtml
+++ b/LearningEnglishWeb/Views/CollectWordTraining/Index.cshtml
@@ -8,10 +8,17 @@
 }
 
 
-<div class="trainingArea cwTrainingArea" data-isreverse="@Model.IsReverse">
-    <input id="trainingId" type="hidden" value="@Model.TrainingId" />
-    @await Html.PartialAsync("CollectWordTrainingQuestion", @Model.CurrentQuestion)
-</div>
+    <div class="trainingArea cw" data-isreverse="@Model?.IsReverse">
+        @if (Model != null)
+        {
+            <input id="trainingId" type="hidden" value="@Model.TrainingId" />
+            @await Html.PartialAsync("CollectWordTrainingQuestion", @Model.CurrentQuestion)
+        }
+        else
+        {
+            @await Html.PartialAsync("../Training/TrainingComplete")
+        }
+    </div>
 
 
 @section Scripts{
@@ -24,31 +31,33 @@
             let isReverse = document.querySelector('.trainingArea').dataset['isreverse'] == "True";
             let trainingId = document.querySelector('#trainingId').value;
             let training = new TrainingBase(trainingId, isReverse);
+            let userAnswerAreaClassName = '.userAnswerArea.cw';
 
-            $(document).on("click", '.optionsArea button.letter', function (evt) {
+
+            $(document).on("click", '.cwOptionsArea button.letter', function (evt) {
                 this.classList.add('btn-warning');
                 this.classList.remove('btn-info');
-                document.querySelector(".userAnswerArea").appendChild(this);
+                document.querySelector(userAnswerAreaClassName).appendChild(this);
                 if (allLettersIsCollect()) {
                     training.checkAnswer('@Url.Action("CheckAnswer")', getAnswer());
                 }
             });
 
-            $(document).on("click", '.userAnswerArea button.letter', function (evt) {
+            $(document).on("click", userAnswerAreaClassName +' button.letter', function (evt) {
                 this.classList.add('btn-info');
                 this.classList.remove('btn-warning');
-                document.querySelector(".optionsArea").appendChild(this);
+                document.querySelector(".cwOptionsArea").appendChild(this);
             });
 
             function getAnswer() {
                 let answer = '';
-                document.querySelectorAll('.userAnswerArea button.letter').forEach(el => {
+                document.querySelectorAll(userAnswerAreaClassName +' button.letter').forEach(el => {
                     answer += el.innerText;
                 });
                 return answer;
             }
             function allLettersIsCollect() {
-                return document.querySelector(".optionsArea").children.length === 0;
+                return document.querySelector(".cwOptionsArea").children.length === 0;
             }
         })();
 
