--- a/LearningEnglishWeb/Views/Vocabulary/Index.cshtml
+++ b/LearningEnglishWeb/Views/Vocabulary/Index.cshtml
@@ -11,13 +11,13 @@
                 @for (var i = 0; i < Model.UserVocabularies.Count(); i += 3)
                 {
                     <div class="carousel-item @(i == 0 ? "active" : "")  ">
-                        @for (var j = i; j < i + 3 && j <Model.UserVocabularies.Count(); j++)
+                        @for (var j = i; j < i + 3 && j < Model.UserVocabularies.Count(); j++)
                         {
                             <div class="card d-inline-block" style="width: 12rem;">
                                 <div class="card-header">  <a asp-action="UserVocabulary" asp-controller="Vocabulary" asp-route-vocabularyId="@Model.UserVocabularies[j].Id">@Model.UserVocabularies[j].Title  </a></div>
                                 <div class="card-body">   количество слов @Model.UserVocabularies[j].WordsCount </div>
                             </div>
-                            }
+                        }
                     </div>
                 }
             </div>
@@ -35,7 +35,7 @@
 
 
 <div class="row justify-content-center">
-        @await Html.PartialAsync("VocabularyWords", Model.UserWords)
+    @await Html.PartialAsync("VocabularyWords", Model.UserWords)
 </div>
 
 
@@ -44,151 +44,7 @@
 
 
 @section Scripts {
-    <script>
-        (function () {
 
-            let audio = new Audio();
-
-            let availableWordsArea = document.getElementById('available-words');
-
-            document.addEventListener('click', function (evt) {
-                let targetElement = evt.target;
-
-            if (targetElement.classList.contains('add-own-word-button')) {
-                addOwnWordButton(targetElement);
-                return;
-            }
-
-            if (targetElement.classList.contains('add-word-button')) {
-                loadTranslationList();
-                return;
-            }
-
-            if (targetElement.classList.contains('audio')) {
-                playAudio(targetElement);
-                return;
-            }
-
-            do {
-                if (targetElement == availableWordsArea) return;
-                targetElement = targetElement.parentNode;
-            } while (targetElement);
-
-            availableWordsArea.innerHTML = '';
-            availableWordsArea.classList.add('d-none');
-
-        });
-
-        var input = document.querySelector("#find-input");
-        input.addEventListener("input", function (event) {
-            toogleButton(this.value);
-            refreshArea(this.value);
-        }, false);
-
-        function playAudio(button) {
-
-                if (button.nodeName == "I") {
-                    button = button.parentElement;
-                }
-
-                let lang = button.classList.contains('translation') ? 2 : 1;
-                $.ajax({
-                    url: '@Url.Action("GetAudio", "Vocabulary")',
-                    type: 'GET',
-                    data: { word: button.previousElementSibling.innerText, language: lang },
-                    success: function (res) {
-                    audio.src = '';
-                    audio.src = res;
-                    audio.play();
-                }
-            })
-        }
-
-
-        function addOwnWordButton(btn) {
-            var template = document.getElementById('addOwnWordTemplate').cloneNode(true);
-            console.log(btn);
-            console.log(btn.parentElement);
-            console.log(template.content);
-            btn.parentElement.replaceChild(template.content, btn);
-        }
-
-
-
-
-        $(document).on('click', '.add-new-word', function () {
-
-            var translation = this.previousElementSibling.value;
-            $.ajax({
-                url: '@Url.Action("AddOwnTranslation", "Vocabulary")',
-                type: 'POST',
-                data: { word: input.value, translation: translation },
-                success: function (res) {
-                     location.reload();
-                }
-            })
-        });
-
-
-
-        $(document).on('click', '.translation-word', function () {
-            $.ajax({
-                url: '@Url.Action("AddWord", "Vocabulary")',
-                type: 'POST',
-                data: { word: input.value, translation: this.innerText },
-                success: function (res) {
-                     location.reload();
-                }
-            })
-        });
-
-        $(document).on('click', '.delete-button', function () {
-            let wordId = this.parentElement.parentElement.querySelector('input[name="wordId"]').value;
-            $.ajax({
-                url: '@Url.Action("RemoveWord", "Vocabulary")',
-                type: 'POST',
-                data: { wordId: wordId },
-                success: function (res) {
-                    location.reload();
-                    //todo убрать из dom модели tr без reload
-                }
-            })
-        });
-
-
-        function loadTranslationList() {
-            availableWordsArea.classList.remove('d-none');
-            $.ajax({
-                url: '@Url.Action("TranslationList", "Vocabulary")',
-                type: 'GET',
-                data: { word: input.value },
-                success: (res) => {
-                    var area = document.querySelector('#available-words');
-                    area.innerHTML = res;
-                }
-            });
-        }
-
-        function toogleButton(str) {
-            let button = document.querySelector(".add-word-button");
-            if (str.length > 0) {
-                button.style.visibility = "visible";
-            } else {
-                button.style.visibility = "hidden";
-            }
-        }
-
-        function refreshArea(str) {
-            $.ajax({
-                url: '@Url.Action("WordList", "Vocabulary")',
-                type: 'GET',
-                data: { mask: str },
-                success: (res) => {
-                    var refreshArea = document.querySelector("#wordList");
-                    refreshArea.innerHTML = res;
-                }
-            });
-        }
-    })();
-</script>
+    <script src="~/js/vocabulary.js">
+    </script>
 }
