--- a/LearningEnglishWeb/Views/Vocabulary/UserVocabulary.cshtml
+++ b/LearningEnglishWeb/Views/Vocabulary/UserVocabulary.cshtml
@@ -14,153 +14,8 @@
 
 
 @section Scripts {
-    <script>
-        (function () {
+    <script src="~/js/vocabulary.js">
 
-            let audio = new Audio();
-
-
-            let vocabularyId = document.querySelector('#vocabularyId').value;
-
-            let availableWordsArea = document.getElementById('available-words');
-
-            document.addEventListener('click', function (evt) {
-                let targetElement = evt.target;
-
-            if (targetElement.classList.contains('add-own-word-button')) {
-                addOwnWordButton(targetElement);
-                return;
-            }
-
-            if (targetElement.classList.contains('add-word-button')) {
-                loadTranslationList();
-                return;
-            }
-
-            if (targetElement.classList.contains('audio')) {
-                playAudio(targetElement);
-                return;
-            }
-
-            do {
-                if (targetElement == availableWordsArea) return;
-                targetElement = targetElement.parentNode;
-            } while (targetElement);
-
-            availableWordsArea.innerHTML = '';
-            availableWordsArea.classList.add('d-none');
-
-        });
-
-        var input = document.querySelector("#find-input");
-        input.addEventListener("input", function (event) {
-            toogleButton(this.value);
-            refreshArea(this.value);
-        }, false);
-
-        function playAudio(button) {
-
-                if (button.nodeName == "I") {
-                    button = button.parentElement;
-                }
-
-                let lang = button.classList.contains('translation') ? 2 : 1;
-                $.ajax({
-                    url: '@Url.Action("GetAudio", "Vocabulary")',
-                    type: 'GET',
-                    data: { word: button.previousElementSibling.innerText, language: lang },
-                    success: function (res) {
-                    audio.src = '';
-                    audio.src = res;
-                    audio.play();
-                }
-            })
-        }
-
-
-        function addOwnWordButton(btn) {
-            var template = document.getElementById('addOwnWordTemplate').cloneNode(true);
-            btn.parentElement.replaceChild(template.content, btn);
-        }
-
-
-
-
-        $(document).on('click', '.add-new-word', function () {
-
-            var translation = this.previousElementSibling.value;
-            $.ajax({
-                url: '@Url.Action("AddOwnTranslation", "Vocabulary")',
-                type: 'POST',
-                data: { word: input.value, translation: translation, vocabularyId: vocabularyId },
-                success: function (res) {
-                     location.reload();
-                }
-            })
-        });
-
-
-
-        $(document).on('click', '.translation-word', function () {
-            $.ajax({
-                url: '@Url.Action("AddWord", "Vocabulary")',
-                type: 'POST',
-                data: { word: input.value, translation: this.innerText, vocabularyId: vocabularyId },
-                success: function (res) {
-                     location.reload();
-                }
-            })
-        });
-
-     
-        $(document).on('click', '.delete-button', function () {
-            let wordId = this.parentElement.parentElement.querySelector('input[name="wordId"]').value;
-            $.ajax({
-                url: '@Url.Action("RemoveWord", "Vocabulary")',
-                type: 'POST',
-                data: { wordId: wordId },
-                success: function (res) {
-                    location.reload();
-                    //todo убрать из dom модели tr без reload
-                }
-            })
-        });
-
-
-        function loadTranslationList() {
-            availableWordsArea.classList.remove('d-none');
-            $.ajax({
-                url: '@Url.Action("TranslationList", "Vocabulary")',
-                type: 'GET',
-                data: { word: input.value, vocabularyId: vocabularyId },
-                success: (res) => {
-                    var area = document.querySelector('#available-words');
-                    area.innerHTML = res;
-                }
-            });
-        }
-
-        function toogleButton(str) {
-            let button = document.querySelector(".add-word-button");
-            if (str.length > 0) {
-                button.style.visibility = "visible";
-            } else {
-                button.style.visibility = "hidden";
-            }
-        }
-
-        function refreshArea(str) {
-            $.ajax({
-                url: '@Url.Action("WordList", "Vocabulary")',
-                type: 'GET',
-                data: { mask: str, vocabularyId: vocabularyId },
-                success: (res) => {
-                    var refreshArea = document.querySelector("#wordList");
-                    refreshArea.innerHTML = res;
-                }
-            });
-        }
-    })();
     </script>
 }
 
