choose trainig words

--- a/LearningEnglishWeb/Views/Shared/_Layout.cshtml
+++ b/LearningEnglishWeb/Views/Shared/_Layout.cshtml
@@ -17,6 +17,8 @@
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/training.css" />
+
+    <link rel="stylesheet" href="~/css/vocabulary.css" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
 </head>
 <body>
