--- a/LearningEnglishWeb/Views/Shared/_Layout.cshtml
+++ b/LearningEnglishWeb/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Training" asp-action="Index">Тренировки</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vocabulary" asp-action="Index">Словарь</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Vocabulary" asp-action="Index" asp-route-id="">Словарь</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="WordSet" asp-action="Index" asp-route-id="">Наборы слов</a>
