--- a/LearningEnglishWeb/Views/Vocabulary/WordList.cshtml
+++ b/LearningEnglishWeb/Views/Vocabulary/WordList.cshtml
@@ -6,7 +6,7 @@
     <div class="mb-4 mt-4">
         <input type="checkbox" id="checkAll" />
         <span> Выбрать все слова </span>
-        <button class="btn btn-sm btn-primary training-sw-btn"> Тренировать</button>
+        <button class="btn btn-sm btn-primary training-sw-btn" data-request-url="@Url.Action("Index", "Training")"> Тренировать</button>
     </div>
 }
 
