--- a/LearningEnglishWeb/Views/WordSet/Index.cshtml
+++ b/LearningEnglishWeb/Views/WordSet/Index.cshtml
@@ -17,7 +17,7 @@
                     <p class="card-text"> Количество слов - @wordSet.WordsCount </p>                    
                 </div>
                 <div class="card-footer text-right">
-                    <a  asp-controller="wordset" asp-action="Index" asp-route-id="@wordSet.Id"> Изучить</a>
+                    <a  asp-controller="WordSet" asp-action="Details" asp-route-id="@wordSet.Id"> Изучить</a>
                 </div>
             </div>
         }
