--- a/Web/LearningEnglishSpa/ClientApp/src/app/modules/vocabulary/vocabulary.component.html
+++ b/Web/LearningEnglishSpa/ClientApp/src/app/modules/vocabulary/vocabulary.component.html
@@ -1,39 +1,41 @@
-<div class="form-group">
-  <input id="find-input" type="text" placeholder="Введите слово" class="form-control" [(ngModel)]="wordMask">
-  <button class="btn btn-success float-right m-2 add-word-button" type="button" (click)="getTranslations()"  [class.invisible]="wordMask.length <= 0"> добавить </button>
-</div>
+<ngu-carousel #myCarousel [inputs]="carouselTileConfig" [dataSource]="carouselTileItems">
+  <ngu-tile *nguCarouselDef="let item; let i = index; let ani = animate">
+    <!-- [@slider]="ani" PLease this animation to this tile to see animation. stackblitz have error with animations -->
+    <div class="tile" [style.background]="'url('+item+')'">
+      <h1>{{i + 1}}</h1>
+    </div>
+  </ngu-tile>
 
+  <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
+  <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
 
-<div (clickOutside)="onClickedOutside($event)" class="w-50 m-2 text-center shadow-lg p-3 mb-3 bg-white rounded" [class.invisible]="hideTranslationArea">
-  <button *ngFor="let translation of wordMaskTranslation" class="btn btn-block" (click)="addWord(wordMask, $event.target.innerText)"> {{translation}}</button>
-
- 
-  <button  class="btn btn-secondary" >Другое</button>
-</div>
-
+  <ul class="myPoint" NguCarouselPoint>
+    <li *ngFor="let i of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
+  </ul>
+</ngu-carousel>
 
 <div class="row justify-content-center">
-  <div class="col-xl-8 col-sm-12">
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th style="width:2%"></th>
-          <th colspan="2" class="text-center">Слово</th>
-          <th>Транскрипция</th>
-          <th>Перевод</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let word of words">
-          <td class="align-middle"> <input type="checkbox" /></td>
-          <td class="align-middle" style="width:2%">  <div class="d-inline-block align-middle" style="width:60px; height:60px;"> <img class="img-thumbnail" [wordsm]="word.name" />  </div>  </td>
-          <td class="align-middle">  {{word.name}}   <button class="btn p-0 ml-1" (click)="playWordAudio(word.name)"> <i class="fa fa-play text-success"></i> </button> </td>
-          <td class="align-middle"> {{word.transcription}}</td>
-          <td class="align-middle">  {{word.translation}}  <button class="btn p-0 ml-1" (click)="playTranslationAudio(word.translation)"> <i class="fa fa-play text-success"></i> </button> </td>
-          <td class="align-middle text-right"> <button class="btn btn-danger btn-sm">удалить</button></td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="col-xl-8 col-sm-12 mb-3 mt-3">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner text-center">
+        <div class="carousel-item" *ngFor="let item of vocabularies; index as i" [class.active]="i ==0">
+          <div class="card d-inline-block" style="width: 12rem;">
+            <div class="card-header"> <a href="">{{item.title}}  </a></div>
+            <div class="card-body">   {{item.wordsCount}} </div>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="text-dark carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
 </div>
+
+<app-user-words>
+</app-user-words>
