--- a/Web/LearningEnglishSpa/ClientApp/src/app/modules/vocabulary/userWords.component.html
+++ b/Web/LearningEnglishSpa/ClientApp/src/app/modules/vocabulary/userWords.component.html
@@ -23,12 +23,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let word of words">
+        <tr *ngFor="let userWord of words">
           <td class="align-middle"> <input type="checkbox" /></td>
-          <td class="align-middle" style="width:2%">  <div class="d-inline-block align-middle" style="width:60px; height:60px;"> <img class="img-thumbnail" [wordsm]="word.name" />  </div>  </td>
-          <td class="align-middle">  {{word.name}}   <button class="btn p-0 ml-1" (click)="playWordAudio(word.name)"> <i class="fa fa-play text-success"></i> </button> </td>
-          <td class="align-middle"> {{word.transcription}}</td>
-          <td class="align-middle">  {{word.translation}}  <button class="btn p-0 ml-1" (click)="playTranslationAudio(word.translation)"> <i class="fa fa-play text-success"></i> </button> </td>
+          <td class="align-middle" style="width:2%">  <div class="d-inline-block align-middle" style="width:60px; height:60px;"> <img class="img-thumbnail" [wordsm]="userWord.word" />  </div>  </td>
+          <td class="align-middle">  {{userWord.word}}   <button class="btn p-0 ml-1" (click)="playWordAudio(userWord.word)"> <i class="fa fa-play text-success"></i> </button> </td>
+          <td class="align-middle"> {{userWord.transcription}}</td>
+          <td class="align-middle">  {{userWord.translation}}  <button class="btn p-0 ml-1" (click)="playTranslationAudio(userWord.translation)"> <i class="fa fa-play text-success"></i> </button> </td>
           <td class="align-middle text-right"> <button class="btn btn-danger btn-sm">удалить</button></td>
         </tr>
       </tbody>
