--- a/Web/LearningEnglishSpa/ClientApp/src/app/modules/vocabulary/vocabulary.component.html
+++ b/Web/LearningEnglishSpa/ClientApp/src/app/modules/vocabulary/vocabulary.component.html
@@ -1,20 +1,8 @@
-<ngu-carousel #myCarousel [inputs]="carouselTileConfig" [dataSource]="vocabularies">
-  <ngu-tile *nguCarouselDef="let vocabulary; let i = index;">
-    <div class="tile">
-      <h1>{{i + 1}}</h1>
-      <p class="text-center">{{vocabulary.title}} </p>
-    </div>
-  </ngu-tile>
 
-  <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
-  <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
-
-  <ul class="myPoint" NguCarouselPoint>
-    <li *ngFor="let i of myCarousel.pointNumbers; let ind = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
-  </ul>
-</ngu-carousel>
+<div>
+  <h3 class="text-center p-3">{{vocabulary?.title}}</h3>
+</div>
 
 
-
-<app-user-words>
+<app-user-words [userVocabularyId]="vocabularyId">
 </app-user-words>
